# DrawHelper

./: README.md  create_shortcut.py  installer.iss  main.py  pyproject.toml  requirements.txt  run.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
drawhelper/: main.py
drawhelper/utils/: get_screen_size.py  qimage_convert.py
drawhelper/widgets/: drawing_widget.py  main_widget.py  menu_widget.py
funcs/: create_save.py  get_save.py  get_screen_size.py
saves/: save.json
src/drawhelper/: __main__.py  main.py
src/drawhelper/core/: drawing_widget.py  main_window.py  menu_widget.py
src/drawhelper/utils/: get_screen_size.py
